componentes funcionando
