# proyecto-final/src/routes/componente.js
@@ -1,10 +1,11 @@
 const express = require('express');
 
-const { createPlacaBase, getComponentes} = require('../controllers/componente');
+const { createPlacaBase,createProcesador, getComponentes} = require('../controllers/componente');
 
 const router = express.Router();
 
 router.post('', createPlacaBase);
+router.post('/procesador', createProcesador);
 router.get('/',getComponentes);
 
 
